--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,8 @@
   }
   .flex{
     display: flex;
-
+    width: 100%;
+    flex-wrap: wrap;
   }
   .row{
     display: flex;
@@ -66,11 +67,20 @@
       border-radius: 5px;
       background-color: rgb(181, 206, 145);
       width: 40%;
-      overflow-y: scroll;
       margin: 0 auto;
+      .popup__detail-scroll{
+        width: 100%;
+        overflow: scroll;
+        height: 80%;
+        padding: 0 .5rem;
+      }
     }
     .popup__button{
+      display: block;
       margin-left: auto;
+      &:hover{
+        cursor: pointer;
+      }
     }
   }
   .loader {
