--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,84 +1,88 @@
-.pokemon{
+.pokemon {
   position: relative;
-  select{
+  select {
     text-align: center;
     padding: 0 1rem;
     margin: 0 0 0 1rem;
     border-radius: 5px;
     height: 30px;
   }
-  .flex{
+  .flex {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
   }
-  .row{
+  .row {
     display: flex;
     padding: 10px 0;
     border: 1px solid gray;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    :hover{
+    :hover {
       cursor: pointer;
     }
-    .c-20{
+    .c-20 {
       width: 20%;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
-    .c-10{
+    .c-10 {
       width: 10%;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
-  .row.header-row{
+  .row.header-row {
     font-weight: 600;
     background-color: grey;
     font-size: 20px;
     color: wheat;
   }
-  .listData{
+  .listData {
     display: flex;
     flex-direction: column;
     height: 50vh;
     overflow: scroll;
   }
-  .flexColRight{
+  .flexColRight {
     display: flex;
     flex-direction: column;
     text-align: right;
   }
-  .popup{
-    position:absolute;
+  .popup {
+    position: absolute;
     z-index: 10;
     width: 100%;
     color: black;
     top: 0;
     margin-left: auto;
     margin-right: auto;
-    
-    img{
+
+    img {
       display: block;
       object-fit: cover;
       margin: 0 auto;
     }
-    .popup__detail{
-      padding:1rem;
+    .popup__detail {
+      padding: 1rem;
       height: 500px;
       border: 1px solid grey;
       border-radius: 5px;
       background-color: rgb(181, 206, 145);
       width: 40%;
       margin: 0 auto;
-      .popup__detail-scroll{
+      .popup__detail-scroll {
         width: 100%;
         overflow: scroll;
         height: 80%;
-        padding: 0 .5rem;
+        padding: 0 0.5rem;
       }
     }
-    .popup__button{
+    .popup__button {
       display: block;
       margin-left: auto;
-      &:hover{
+      &:hover {
         cursor: pointer;
       }
     }
@@ -93,15 +97,23 @@
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
   }
-  
+
   /* Safari */
   @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+    0% {
+      -webkit-transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+    }
   }
-  
+
   @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
